# ft_printf

./: .apply_precision.c.swp  .bigInt.c.swp  .bigInt.h.swp  .big_int.c.swp  .dragon4.c.swp  .float_construction_functions.c.swp  .float_main_functions.c.swp  .float_mini_dragon4.c.swp  .ft_hash_plus.c.swp  .ft_printf.c.swp  .ft_printf.h.swp  .ft_put_float_f.c.swp  .ft_putfnbr.c.swp  .header.h.swp  .help_functions.c.swp  .hep.swp  .main.c.swp  .main_original.c.swp  .print.c.swp  CMakeLists.txt  Makefile  README.md  a.out  aa.c  adam.c  apply_hash.c  apply_precision.c  apply_quote.c  apply_signs.c  apply_width.c  author  bigInt.c  bigInt.h  bigInt_functions.c  big_int.c  blabla  build_result.c  dragon4.c  dragon4.h  fetch_by_sizem.c  (+52 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
float src/: .all_bigint_functions.c.swp  .bigint.h.swp  .construction_functions.c.swp  .float_main_functions.c.swp  .ft_printf.h.swp  .main.c.swp  .mini_dragon4.c.swp  a.out  all_bigint_functions.c  bigint.h  construction_functions.c  count  float_main_functions.c  ft_printf.h  helper_functions_unnecessary.c  main.c  mini_dragon4.c
for_cline/: CMakeLists.txt  a.out  apply_quote.c  apply_signs.c  build_result.c  float_bigint.h  float_construction_functions.c  float_main_functions.c  float_mini_dragon4.c  ft_printf.c  ft_putc_and_s.c  ft_putdnbr.c  ft_putfnbr.c  ft_putunbr.c  ft_putxnbr.c  main.c  printb.c  save_precision.c
for_cline/a.out.dSYM/Contents/Resources/DWARF/: a.out
for_cline/libft/: Makefile  ft_memmove.c
headers/: float_bigint.h  ft_printf.h
libft/: Makefile  ft_memcpynull.c  ft_strnew.c  libft.h
read_flags_fail/: a.out  ft_printf.h  ft_printf_med.c  header.h
src/: apply_hash.c  apply_precision.c  apply_signs.c  apply_width.c  build_result.c  float_all_bigint_functions.c  float_construction_functions.c  float_helper_functions_unnecessary.c  float_scientific_construction.c  ft_printf.c  ft_putc_and_s.c  save_precision.c
trash/: test.c  testx.c
